# tree-sitter-skull

./: .gitattributes  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json
.github/workflows/: test.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: statements.txt
