[package]
name = "tree-sitter-skull"
description = "skull grammar for the tree-sitter parsing library"
version = "0.7.0"
keywords = ["incremental", "parsing", "skull"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-skull"
edition = "2022"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
